# portfolio_engine

./: .gitignore  .pre-commit-config.yaml  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANUAL_VALIDATION_RUNBOOK.md  MILESTONE_1.md  MILESTONE_10.md  MILESTONE_11_DESIGN.md  MILESTONE_12_DESIGN.md  MILESTONE_13_DESIGN.md  MILESTONE_1_ADDENDUM.md  MILESTONE_2.md  MILESTONE_2_5.md  MILESTONE_2_PLAN.md  MILESTONE_3.md  MILESTONE_4.md  MILESTONE_4_SPEC.md  MILESTONE_5.md  MILESTONE_6.md  MILESTONE_7.md  MILESTONE_7_DESIGN.md  MILESTONE_8.md  MILESTONE_9.md  PROJECT_STATUS.md  README.md  SECURITY.md  TESTING.md  conftest.py  hacs.json  pyproject.toml  pytest.ini  requirements-ha-test.txt  requirements-test.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
dashboards/: portfolio_engine_dashboard.yaml
docs/: COMPATIBILITY_POLICY.md  ENTITY_API_POLICY.md  ENTITY_CONTRACTS.md  QUALITY_SCALE.md  RELEASE_CHECKLIST.md
engine/: __init__.py  models.py  period_returns.py  portfolio_engine.py  snapshot_policy.py  transaction_replay.py  xirr.py
importers/: base.py  duplicate_detection.py  generic_csv_importer.py  ibkr_flex_query_importer.py  report.py
providers/: asset_search_base.py  currency_base.py  price_base.py  yahoo_finance.py  yahoo_finance_currency.py
repositories/: base.py  in_memory_snapshot_repository.py  snapshot_base.py  writer_base.py  yaml_portfolio_writer.py  yaml_repository.py
scripts/: benchmark.py  setup_ha_test_env.sh
tests/: test_asset_search_provider.py  test_benchmark_harness.py  test_calculators.py  test_currency_provider.py  test_dividend_calculator.py  test_models.py  (+24 more)
(+108 files in other folders)
